Use `List.of()`
Signed-off-by: subhramit <subhramit.bb@live.in>